# bookish-umbrella

./: .gitignore  README.md  driver_goldstein_price_1.py  driver_goldstein_price_2.py  driver_goldstein_price_3.py  driver_himmelblaus_1.py  driver_himmelblaus_2.py  driver_himmelblaus_3.py  driver_rosenbrock_1.py  driver_rosenbrock_2.py  driver_rosenbrock_3.py  pyproject.toml  read_results.py  read_tree.py
Goldstein_price_results/Goldstein_1/Goldstein_1_result_generating_files/: Goldstein_1_0.pkl  Goldstein_1_0_fal_val_gp.pkl  Goldstein_1_0_point_history.pkl  Goldstein_1_1.pkl  Goldstein_1_10.pkl  Goldstein_1_10_fal_val_gp.pkl  Goldstein_1_10_point_history.pkl  Goldstein_1_11_fal_val_gp.pkl  Goldstein_1_11_point_history.pkl  Goldstein_1_12.pkl  Goldstein_1_12_fal_val_gp.pkl  Goldstein_1_12_point_history.pkl  Goldstein_1_13_fal_val_gp.pkl  Goldstein_1_13_point_history.pkl  Goldstein_1_14.pkl  Goldstein_1_14_fal_val_gp.pkl  Goldstein_1_14_point_history.pkl  Goldstein_1_15.pkl  Goldstein_1_15_fal_val_gp.pkl  Goldstein_1_15_point_history.pkl  Goldstein_1_16.pkl  Goldstein_1_16_fal_val_gp.pkl  Goldstein_1_16_point_history.pkl  Goldstein_1_17.pkl  Goldstein_1_17_fal_val_gp.pkl  Goldstein_1_17_point_history.pkl  Goldstein_1_18.pkl  Goldstein_1_18_fal_val_gp.pkl  Goldstein_1_18_point_history.pkl  Goldstein_1_19.pkl  Goldstein_1_19_fal_val_gp.pkl  Goldstein_1_19_point_history.pkl  Goldstein_1_1_fal_val_gp.pkl  Goldstein_1_1_point_history.pkl  Goldstein_1_2_fal_val_gp.pkl  Goldstein_1_2_point_history.pkl  Goldstein_1_3_fal_val_gp.pkl  Goldstein_1_3_point_history.pkl  (+19 more)
(+7 files in other folders)
