[tool.poetry]
name = "scripts"
version = "0.0.2"
description = ""
authors = ["Tanmay Khandait"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
partx = {path = "../part_x"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
